--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -3,14 +3,14 @@
     <data>
 
         <!-- NEW Form View Fleet Vehicle -->
-        <record id='car-workshop_fleet_form_view' model='ir.ui.view'>
+        <record id='car-workshop_fleet_vehicle_view_form' model='ir.ui.view'>
             <field name="name">fleet.vehicle.form</field>
             <field name="model">fleet.vehicle</field>
             <field name="priority">1</field>
             <field name="arch" type="xml">
                 <form string="Vehicle">
                 <sheet>
-                    <field name="image_medium" widget="image" class="oe_avatar"/>
+                    <field name="image_client_vehicle" widget="image" class="oe_avatar"/>
                     <div class="oe_title">
                         <label for="model_id" class="oe_edit_only"/>
                         <h1>
@@ -73,11 +73,74 @@
             </field>
         </record>
 
+        <record id='car-workshop_fleet_vehicle_view_kanban' model='ir.ui.view'>
+        <field name="name">fleet.vehicle.kanban</field>
+        <field name="model">fleet.vehicle</field>
+        <field name="priority">1</field>
+            <field name="arch" type="xml">
+            <kanban>
+                <field name="license_plate" />
+                <field name="model_id" />
+                <field name="driver_id" />
+                <field name="location" />
+                <field name="state_id" />
+                <field name="id" />
+                <field name="image_client_vehicle" />
+                <field name="tag_ids" />
+                <field name="contract_renewal_due_soon" />
+                <field name="contract_renewal_overdue" />
+                <field name="contract_renewal_name" />
+                <field name="contract_renewal_total" />
+                <field name="contract_count" />
+
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div class="o_kanban_image">
+                                <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.id.raw_value)"/>
+                            </div>
+                            <div class="oe_kanban_details">
+                                <strong class="o_kanban_record_title">
+                                    <field name="license_plate"/> : <field name="model_id"/>
+                                </strong>
+                                <div class="o_kanban_tags_section">
+                                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                                </div>
+                                <ul>
+                                    <li>
+                                        <t t-if="record.driver_id.raw_value"><field name="driver_id"/></t>
+                                    </li>
+                                    <li>
+                                        <t t-if="record.location.raw_value"><field name="location"/></t>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="o_kanban_button">
+                                <a t-if="record.contract_count.raw_value>0" data-type="object"
+                                   data-name="return_action_to_open" href="#" class="oe_kanban_action oe_kanban_action_a"
+                                   data-context='{"xml_id":"fleet_vehicle_log_contract_action","search_default_open": 1}'>
+                                    <field name="contract_count"/>
+                                    Contract(s)
+                                    <span t-if="record.contract_renewal_due_soon.raw_value and !record.contract_renewal_overdue.raw_value"
+                                        class="fa fa-exclamation-triangle" t-att-style="'color:orange'">
+                                    </span>
+                                     <span t-if="record.contract_renewal_overdue.raw_value"
+                                        class="fa fa-exclamation-triangle" t-att-style="'color:red;'">
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
         <!--Action Vehicles Menu-->
         <record model="ir.actions.act_window" id="action_car_vehicles_config">
             <field name="name">Vehicles</field>
             <field name="res_model">fleet.vehicle</field>
-            <field name="form_view_id">car-workshop_fleet_form_view</field>
+            <field name="form_view_id">car-workshop_fleet_view_form</field>
             <field name="view_type">form</field>
             <field name="view_mode">kanban,form</field>
         </record>
